# Postgres-MCP-for-Auditing

./: .env  Dockerfile  README.md  agent.py  append_diag.py  append_idx.py  append_wf.py  bloat.py  check_pg.py  docker-compose.yml  inject_logger.py  main.py  pyproject.toml  query_memory.db  saved_queries.yaml  seed.py  test_all_tools.py  test_dynamic.py  test_history.py  test_similarity.py  test_smart_query.py  test_usage.py  update_main2.py  update_main3.py  update_seed.py  workflows.yaml
src/: main.py
src/config/: settings.py
src/db/: audit.py  connection.py
src/services/: schema_intelligence.py
src/tools/: diagnostics.py  explain.py  formatters.py  health.py  history.py  indexes.py  maintenance.py  performance.py  schema.py  sessions.py  smart_query.py  workflows.py
