[project]
name = "pg-auditor"
version = "0.1.0"
description = "PostgreSQL DBA Auditor MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.4.1",
    "psycopg[binary]>=3.2.1",
    "psycopg-pool>=3.2.4",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0"
]

[project.scripts]
pg-auditor = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]